--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <div class="row justify-content-center fs-6 text-center">
                 <div class="col-md">
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda enim debitis ut impedit adipisci accusantium alias, distinctio excepturi asperiores? Excepturi, quis incidunt! Porro, iure deleniti!
+                        mahasiswa ti yang memiliki hobi tentang ilustrasi terutama di bidang fanart
                     </p>
                 </div>
                 <div class="col-md">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, accusamus sequi quidem dolorem unde natus iure neque blanditiis enim eos temporibus ab earum perferendis similique.
+                      bantu saya untuk menambah uang jajan dengan jajan fanart di saya bisa mengcontact saya atau dm saya di instagram
                     </p>
                 </div>
             </div>
